# coman

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: pr-review.yaml  release.yaml  test.yaml
coman/: Cargo.toml  build.rs
coman/.config/: config.toml
coman/src/: action.rs  api_client.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  focus_manager.rs  logging.rs  main.rs  tui.rs  util.rs
coman/src/app/: ids.rs  messages.rs  mod.rs  model.rs  user_events.rs
coman/src/cli/: app.rs  exec.rs  mod.rs  proxy.rs  rpc.rs
coman/src/components/: button.rs  command_handler.rs  context_menu.rs  download_popup.rs  error_popup.rs  file_tree.rs  footer.rs  global_listener.rs  hello_world_label.rs  info_popup.rs  job_status_filter_popup.rs  login_popup.rs  mod.rs  popup.rs  resource_usage.rs  status_bar.rs  system_select_popup.rs  toolbar.rs  workload_details.rs  workload_list.rs  workload_log.rs  workload_menu.rs
coman/src/cscs/: api_client.rs  cli.rs  dcgm_enroot_hook.sh  handlers.rs  mod.rs  oauth2.rs  ports.rs
coman/src/cscs/api_client/: client.rs  types.rs
coman/src/util/: async_port.rs  cscs.rs  keyring.rs  mod.rs  types.rs  ui.rs
firecrest_client/: Cargo.toml  build.rs
firecrest_client/src/: client.rs  compute_api.rs  error.rs  filesystem_api.rs  lib.rs  status_api.rs  types.rs  util.rs
openapi_client/: Cargo.toml  README.md  build.rs
openapi_client/.openapi-generator/: FILES
openapi_client/docs/: ApResponseErrorType.md  ApiResponseError.md  BucketLifecycleConfiguration.md  CompressRequest.md  CompressResponse.md  CompressionType.md  ComputeApi.md  ContentUnit.md  CopyRequest.md  CopyResponse.md  DataOperation.md  DataOperationDataTransfer.md  DeleteResponse.md  DownloadFileResponse.md  Env.md  ExtractRequest.md  ExtractResponse.md  Features.md  File.md  FileChecksum.md  FileContent.md  FileStat.md  FileSystem.md  FileSystemDataType.md  FilesystemApi.md  FilesystemServiceHealth.md  GetDirectoryLsResponse.md  GetFileChecksumResponse.md  GetFileHeadResponse.md  GetFileStatResponse.md  GetFileTailResponse.md  GetFileTypeResponse.md  GetJobMetadataResponse.md  GetJobResponse.md  GetLiveness.md  GetNodesResponse.md  GetPartitionsResponse.md  GetReservationsResponse.md  GetSystemsResponse.md  GetViewFileResponse.md  (+53 more)
openapi_client/src/apis/: compute_api.rs  configuration.rs  filesystem_api.rs  mod.rs  status_api.rs
openapi_client/src/models/: ap_response_error_type.rs  api_response_error.rs  bucket_lifecycle_configuration.rs  compress_request.rs  compress_response.rs  compression_type.rs  content_unit.rs  copy_request.rs  copy_response.rs  data_operation.rs  data_operation_data_transfer.rs  delete_response.rs  download_file_response.rs  env.rs  extract_request.rs  extract_response.rs  features.rs  file.rs  file_checksum.rs  file_content.rs  file_stat.rs  file_system.rs  file_system_data_type.rs  filesystem_service_health.rs  get_directory_ls_response.rs  get_file_checksum_response.rs  get_file_head_response.rs  get_file_stat_response.rs  get_file_tail_response.rs  get_file_type_response.rs  get_job_metadata_response.rs  get_job_response.rs  get_liveness.rs  get_nodes_response.rs  get_partitions_response.rs  get_reservations_response.rs  get_systems_response.rs  get_view_file_response.rs  health_check_exception.rs  health_check_type.rs  (+52 more)
openapi_spec/: firecrest_3.0.yaml  firecrest_3.1.yaml
src/: app.rs  components.rs  config.rs  main.rs  tui.rs  ui.rs
src/components/: footer.rs  workload_menu.rs
src/ui/: mod.rs  ui_common.rs  ui_runai.rs
