[package]
name = "coman"
version = "0.1.0"
edition = "2024"
description = "Compute Manager for managing HPC compute"
authors = ["Ralf Grubenmann <ralf.grubenmann@sdsc.ethz.ch>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
cli-log = "2.1.0"
color-eyre = "0.6.5"
config = "0.14.0"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
eyre = "0.6.12"
futures = "0.3.31"
human-panic = "2.0.2"
itertools = "0.14.0"
json5 = "0.4.1"
keyring-lib = { version = "1.0.2", features = [
  "tokio",
  "derive",
  "vendored",
  "rustls",
] }
lazy_static = "1.5.0"
libc = "0.2.161"
open = "5.3.2"
firecrest_client = { workspace = true }
openidconnect = "4.0.1"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
reqwest = "0.12.23"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.9.7"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-realm-stdlib = "3.0.0"
tuirealm = { version = "3.1.0", features = [
  "derive",
  "crossterm",
  "async-ports",
] }
tabled = { version = "0.20.0", features = ["macros"] }
nom = "8.0.0"
tera = "1.20.1"
inquire = "0.9.1"
oci-distribution = "0.11.0"
docker_credential = "1.3.2"
chrono = "0.4.42"
openssl = { version = "0.10.75", features = ["vendored"] }
tui-realm-treeview = "3.0.0"
aws-sdk-s3 = "1.115.0"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
