[package]
name = "firecrest_client"
version = "2.4.0"
edition = "2024"
description = "Firecrest client based on Firecrest v2 OpenAPI Spec"
authors = ["Ralf Grubenmann <ralf.grubenmann@sdsc.ethz.ch>"]
build = "build.rs"

[dependencies]
chrono = "0.4.42"
eyre = "0.6.12"
oas3-gen-support = "0.21.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_with = { version = "3.15", features = ["chrono"] }
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
better_default = { version = "1.0" }
anyhow = "1.0.90"

[build-dependencies]
serde_json = "1.0.145"
serde_yaml = "0.9.34"
anyhow = "1.0.90"
tempfile = "3.23.0"
