[package]
name = "firecrest_client"
version = "2.5.0"
edition = "2024"
description = "Firecrest client based on Firecrest v2 OpenAPI Spec"
authors = ["Ralf Grubenmann <ralf.grubenmann@sdsc.ethz.ch>"]
build = "build.rs"

[dependencies]
chrono = "0.4.45"
eyre = "0.6.12"
oas3-gen-support = "0.21.1"
regex = "1.12.4"
reqwest = { version = "0.12.28", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_with = { version = "3.21", features = ["chrono"] }
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
better_default = { version = "1.0" }
anyhow = "1.0.102"

[build-dependencies]
serde_json = "1.0.150"
serde_yaml = "0.9.34"
anyhow = "1.0.102"
tempfile = "3.27.0"
